# xllm

xllm/api_service/: api_service.cpp
xllm/core/framework/model/: CMakeLists.txt  causal_lm.h  causal_vlm.h  dit_model.h  mm_embedding_vlm.h  model_input.cpp  model_input.h  model_input_factory.cpp  model_input_factory.h  model_input_factory_test.cpp  model_input_param_groups.cpp  model_input_param_groups.h  model_input_test.cpp  model_traits.h  rec_causal_lm.h
xllm/core/layers/: qwen2_decoder_layer.cpp  qwen2_decoder_layer.h  qwen3_moe_decoder_layer.cpp  qwen3_moe_decoder_layer.h
xllm/core/runtime/: acl_graph_executor_impl.cpp  acl_graph_executor_impl.h  acl_graph_executor_test.cpp  base_executor_impl.cpp  base_executor_impl.h  cuda_graph_executor_impl.cpp  cuda_graph_executor_impl.h  cuda_graph_executor_test.cpp  dit_worker_impl.cpp  embed_vlm_worker_impl.cpp  embed_worker_impl.cpp  executor.cpp  executor.h  executor_impl.h  forward_params.h  forward_shared_memory_manager.cpp  llm_worker_impl.cpp  mlu_graph_executor_impl.cpp  mlu_graph_executor_impl.h  mlu_graph_executor_test.cpp  mm_embed_vlm_worker_impl.cpp  mtp_worker_impl.cpp  params_utils.cpp  rec_worker_impl.cpp  spec_input_builder.cpp  spec_input_builder.h  spec_input_builder_test.cpp  speculative_worker_impl.cpp  suffix_worker_impl.cpp  vlm_executor_impl.cpp  vlm_executor_impl.h  vlm_worker_impl.cpp  worker_impl.cpp  worker_impl.h
xllm/models/llm/: llm_model_base.h  mtp_model_base.h  qwen3_next_hybrid_base.h
xllm/models/rec/: rec_model_base.h
xllm/models/vlm/: oxygen_vlm.h  qwen2_5_vl.h  qwen2_vl.h  (+2 more)
(+27 files in other folders)
