include(cc_library)
include(cc_test)

cc_library(
  NAME 
    model
  HDRS
    causal_lm.h
    rec_causal_lm.h
    causal_vlm.h
    dit_model.h
    mm_embedding_vlm.h
    model_input.h
    model_input_factory.h
    model_input_param_groups.h
    model_args.h
    model_input_params.h
  SRCS
    model_input.cpp
    model_input_factory.cpp
    model_input_param_groups.cpp
    npu_cp_ep_padding.cpp
    npu_dp_ep_padding.cpp
  DEPS
    :common
    :common_layers
    :kv_cache
    :parallel_state
    :processors
    :chat_template
    glog::glog
    torch
    torch_python
    $<$<BOOL:${USE_NPU}>:platform_npu>
)

cc_test(
  NAME
    model_input_factory_test
  SRCS
    model_input_factory_test.cpp
  DEPS
    model
    GTest::gtest_main
)

if(USE_NPU)
cc_test(
    NAME 
      npu_dp_ep_padding_test
    SRCS
      npu_dp_ep_padding_test.cpp
    DEPS
      :parallel_state
      torch
      model
      absl::synchronization
      absl::time
      GTest::gtest_main
)

target_link_libraries(npu_dp_ep_padding_test
                 PUBLIC Python::Python
                 $<$<BOOL:${USE_NPU}>:ascendcl>
                 $<$<BOOL:${USE_NPU}>:hccl>
                 $<$<BOOL:${USE_NPU}>:c_sec>
                 $<$<BOOL:${USE_NPU}>:nnopbase>)
endif()
